--- a/src/app/Components/show-images/show-images.component.html
+++ b/src/app/Components/show-images/show-images.component.html
@@ -13,7 +13,7 @@
         <button class="me-2" mat-icon-button matTooltip="Click aquí para ver imagen" (click)="onOpenImage(item)">
           <mat-icon class="svgcss" svgIcon="photo_library"></mat-icon>
         </button>
-        <span class="fw-bold"  (click)="onShowWord()">{{item.word}}</span>
+        <span class="fw-bold"  (click)="onShowWord(item.word)">{{item.word}}</span>
       </div>
     </div>
   </div>
