--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
@@ -1,12 +1,12 @@
  <div class="mt-2">
    <label class="fw-bold">Lista de palabras: </label>
-    <select size="8" class="form-select mat-elevation-z1 bg-light">
+    <select #Select size="8" class="form-select mat-elevation-z1 bg-light">
       <option
         class="p-1"
         (click)="onSelectWord($event)"
         *ngFor="let item of itemList | filter;
         index as i"
-        [selected]="currentEntry == item.word"
+        [selected]="item.word == currentEntry"
         value="{{item.id}}"
       >
         {{item.word}}
@@ -17,7 +17,9 @@
     <label class="fw-bold">
       ¿No querrás decir?
     </label>
-    <select size="2" class="form-select mat-elevation-z1 bg-light w-100"></select>
+    <select size="2" class="form-select mat-elevation-z1 bg-light w-100">
+      <option [value]="suggestedWord.id" class="fw-bolder">{{suggestedWord.word}}</option>
+    </select>
 </div>
 
 
