filter fixed, all field except gramatical criterial are working

--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -5,6 +5,7 @@
     <span class="tecnicaly"></span>
     <button mat-icon-button class="btn btn-outline-secondary icon-button">
       <mat-icon
+        class="mb-3"
         svgIcon="close"
         (click)="onCloseAdvSearch()"
       ></mat-icon>
