--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
@@ -8,7 +8,7 @@
         [selected]="item.word == currentEntry"
         [value]="item.id"
       >
-        {{item.word}} | {{item.usg | json}}
+        {{item.word}} | {{item.pos | json}}
       </option>
     </select>
   </div>
