--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -3,11 +3,14 @@
   <div class="card-title d-flex">
     <span class="fw-bolder">Criterios de b&uacute;squeda</span>
     <span class="tecnicaly"></span>
-    <button mat-icon-button class="btn btn-outline-secondary icon-button">
+    <button 
+    mat-icon-button 
+    class="btn btn-outline-secondary icon-button"
+    (click)="onCloseAdvSearch()"
+    >
       <mat-icon
         class="mb-3"
         svgIcon="close"
-        (click)="onCloseAdvSearch()"
       ></mat-icon>
     </button>
   </div>
@@ -109,19 +112,6 @@
       </p>
     </div>
   </div>
-  <!--  <mat-card class="example-card mat-elevation-z0">-->
-  <!--    <mat-card-title>-->
-  <!--      Reseña-->
-  <!--    </mat-card-title>-->
-  <!--    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">-->
-  <!--    <mat-card-content>-->
-  <!--      <p>-->
-  <!--        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.-->
-  <!--        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally-->
-  <!--        bred for hunting.-->
-  <!--      </p>-->
-  <!--    </mat-card-content>-->
-  <!--  </mat-card>-->
 </div>
 
 <!-- Search Content -->
@@ -230,8 +220,9 @@
     <hr />
     <span class="fs-5">{{ word.palabra.syll }}</span>
     <div *ngFor="let item of word.homofonas">
-      <span class="fs-5">{{ item.orth }}</span>
-      <span class="fs-5 text-decoration-underline">{{ item.gram }}</span>
+      <span class="fs-5">{{ item.name }}</span>
+      <span class="p-1"></span>
+      <span class="fs-5">{{ item.content }}</span>
     </div>
   </mat-card>
 </div>
