--- a/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
+++ b/src/app/Components/dash-board/dash-board-ifo/dash-board-ifo.component.html
@@ -1,24 +1,27 @@
- <div class="mt-2">
-   <label class="fw-bold">Lista de palabras: </label>
-    <select #Select size="8" class="form-select mat-elevation-z1 bg-light">
-      <option
-        (click)="onSelectWord($event)"
-        *ngFor="let item of itemList | advfilter:advSearchObj;
-        index as i"
-        [selected]="item.word == currentEntry"
-        [value]="item.id"
-      >
-        {{item.word}} | {{item.pos | json}}
-      </option>
-    </select>
-  </div>
-  <div class="mt-2">
-    <label class="fw-bold">
-      ¿No querrás decir?
-    </label>
-    <select size="2" class="form-select mat-elevation-z1 bg-light w-100">
-      <option [value]="suggestedWord?.id" class="fw-bolder">{{suggestedWord?.word}}</option>
-    </select>
+<div class="mt-2">
+  <label class="fw-bold">Lista de palabras: </label>
+  <select #Select size="8" class="form-select mat-elevation-z1 bg-light">
+    <option
+      class="fw-bold"
+      (click)="onSelectWord($event)"
+      *ngFor="let item of itemList | advfilter: advSearchObj; index as i"
+      [selected]="item.word == currentEntry"
+      [value]="item.id"
+    >
+      {{ item.word }} | {{ item.pos | json }}
+    </option>
+  </select>
 </div>
-
-
+<div class="mt-2">
+  <label class="fw-bold"> ¿No querrás decir? </label>
+  <select size="2" class="form-select mat-elevation-z1 bg-light w-100">
+    <option
+    *ngFor="let suggest of suggestedWord"
+      [value]="suggest?.id"
+      class="fw-bold text-success"
+      (click)="onSelectWord($event)"
+    >
+      {{ suggest?.word }}
+    </option>
+  </select>
+</div>
