Update image-modal.component.html component

--- a/src/app/Components/modals/video-modal/video-modal.component.html
+++ b/src/app/Components/modals/video-modal/video-modal.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div mat-dialog-actions>
+  <div class="d-flex justify-content-end" mat-dialog-actions>
     <button matTooltip="Cerrar el Video" class="mb-3" mat-icon-button mat-dialog-close="true">
       <mat-icon class="mb-1" svgIcon="close"></mat-icon>
     </button>
