--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -118,30 +118,49 @@
   <div>
     <mat-card
       class="example-card mat-elevation-z0"
-      *ngFor="let word of wordList"
+      *ngFor="let word of wordList; index as iword"
     >
-      <div class="">
-        <span class="fw-bold fs-5 p-2">{{ word.palabra.form.orthography }}</span>
-        <span
-          *ngIf="word.grupoGramatical.pos.length > 1"
-          class="text-decoration-underline fs-5"
-        >{{ word.grupoGramatical.pos }}</span
+      <div class="row align-items-center justify-content-start">
+        <div class="col-lg-2 col-md-2 col-sm-2 justify-content-between">
+          <span class="fw-bold">{{ word.palabra.form.orthography }}</span>
+            <div *ngFor="let itemNotes of word.notes">
+              <span
+                *ngFor="let notes of itemNotes.noteDefinition"
+              >
+                <span
+                  *ngIf="itemNotes.id === iword+1"
+                  (click)="onLemmaWord(notes.lemmaid)"
+                ></span>
+                {{notes.textos}}
+              </span>
+            </div>
+          &nbsp;
+          <span
+            *ngIf="word.grupoGramatical.pos.length > 1"
+          >{{ word.grupoGramatical.pos }}</span
+          >
+        </div>
+        <div
+          class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
         >
-      </div>
-
-      <div class="row">
-
-        <div class="col-lg-3 col-md-3 col-sm-3 p-1 d-flex justify-content-center">
           <button class="btn-primary rounded mx-1" matTooltip="Reproducir Audio">
             <mat-icon matPrefix svgIcon="volume_up"></mat-icon>
           </button>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 p-1 d-flex justify-content-center">
-          <button class="btn-primary rounded mx-1" matTooltip="Play Video">
+        <div
+          class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+        >
+          <button
+            class="btn-primary rounded mx-1"
+            matTooltip="Play Video"
+            (click)="onOpenWordVideo(word.palabraSrc[0].url)"
+          >
             <mat-icon matPrefix svgIcon="play_circle"></mat-icon>
           </button>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 p-1 d-flex justify-content-center">
+        <div
+          class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+        >
           <button
             class="btn-primary rounded mx-1"
             matTooltip="Ver Imagen"
@@ -150,7 +169,9 @@
             <mat-icon matPrefix svgIcon="image"></mat-icon>
           </button>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 p-1 d-flex justify-content-center">
+        <div
+          class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+        >
           <button
             class="btn-primary rounded mx-1"
             matTooltip="Conjugar"
@@ -165,8 +186,6 @@
       &nbsp;
       <span class="fs-5">{{ word.usg.value }}</span>
       &nbsp;
-
-
       <!-- <button
       class="btn btn-light"
       (click)="onPlayAudio()"
@@ -208,7 +227,8 @@
             </button>
           </div>
           &nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="fw-bolder px-1">{{ is + 1 }}.</span>
+          <span class="fw-bolder px-1">{{ is + 1 }} </span>
+          &nbsp; &nbsp;
           <div class="d-flex flex-column">
             <div id="definitions-container">
               <span
@@ -245,6 +265,7 @@
               </span>
             </div>
             <div class="" *ngFor="let itemRe of item.entradasRelacionadas">
+              <span><br></span>
               <span>// {{itemRe.myForms.lbl}} <span class="fw-bolder">{{itemRe.myForms.orthography}}</span></span>
               <span><br></span>
               <span *ngFor="let itemReSense of itemRe.mySense.definition">
@@ -272,7 +293,6 @@
               </span>
             </div>
           </div>
-
         </div>
         <hr/>
       </div>
