--- a/src/app/Components/modals/image-modal/image-modal.component.html
+++ b/src/app/Components/modals/image-modal/image-modal.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div mat-dialog-actions>
+  <div class="d-flex justify-content-end" mat-dialog-actions>
     <button class="mb-3" mat-icon-button mat-dialog-close="true">
       <mat-icon svgIcon="close" class="mb-1"></mat-icon>
     </button>
