--- a/src/app/Components/modals/verbal-table-modal/verbal-table-modal.component.html
+++ b/src/app/Components/modals/verbal-table-modal/verbal-table-modal.component.html
@@ -3,7 +3,10 @@
     <div class="border-dark" #verbalTable>
 
     </div>
-    <button class="btn btn-primary" mat-dialog-close="true">
-        Cerrar
+  <div class="d-flex justify-content-end">
+    <button class="btn btn-primary m-2" mat-dialog-close="true">
+      Cerrar
     </button>
+  </div>
+
 </div>
