Complete scroll functionality in dash-board-content.component

--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.css
@@ -55,10 +55,18 @@
 .text-orange{
   color: orange;
 }
-.container{
+
+.container {
   padding: 3% 25%;
 }
 
-.btn{
+.btn {
   height: 50px;
+}
+
+cdk-virtual-scroll-viewport {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
 }
