--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -116,13 +116,14 @@
 <!-- Search Content -->
 <div class="welcome mt-3" *ngIf="selectClick">
   <div>
-    <mat-card
-      class="example-card mat-elevation-z0"
-      *ngFor="let word of wordList; index as iword"
-    >
-      <div class="row align-items-center justify-content-start">
-        <div class="col-lg-2 col-md-2 col-sm-2 justify-content-between">
-          <span class="fw-bold">{{ word.palabra.form.orthography }}</span>
+    <cdk-virtual-scroll-viewport itemSize="5">
+      <mat-card
+        *ngFor="let word of wordList; index as iword"
+        class="example-card mat-elevation-z0"
+      >
+        <div class="row align-items-center justify-content-start">
+          <div class="col-lg-2 col-md-2 col-sm-2 justify-content-between">
+            <span class="fw-bold">{{ word.palabra.form.orthography }}</span>
             <div *ngFor="let itemNotes of word.notes">
               <span
                 *ngFor="let notes of itemNotes.noteDefinition"
@@ -134,120 +135,120 @@
                 {{notes.textos}}
               </span>
             </div>
-          &nbsp;
-          <span
-            *ngIf="word.grupoGramatical.pos.length > 1"
-          >{{ word.grupoGramatical.pos }}</span
-          >
-        </div>
-        <div
-          class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
-        >
-          <button class="btn-primary rounded mx-1" matTooltip="Reproducir Audio">
-            <mat-icon matPrefix svgIcon="volume_up"></mat-icon>
-          </button>
-        </div>
-        <div
-          class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
-        >
-          <button
-            class="btn-primary rounded mx-1"
-            matTooltip="Play Video"
-            (click)="onOpenWordVideo(word.palabraSrc[0].url)"
-          >
-            <mat-icon matPrefix svgIcon="play_circle"></mat-icon>
-          </button>
-        </div>
-        <div
-          class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
-        >
-          <button
-            class="btn-primary rounded mx-1"
-            matTooltip="Ver Imagen"
-            (click)="onOpenWordImage(word.palabraSrc[0].url)"
-          >
-            <mat-icon matPrefix svgIcon="image"></mat-icon>
-          </button>
-        </div>
-        <div
-          class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
-        >
-          <button
-            class="btn-primary rounded mx-1"
-            matTooltip="Conjugar"
-            (click)="onConj(word.palabraSrc[0].url)"
-          >
-            Conjugar
-          </button>
-        </div>
-      </div>
-      &nbsp;
-
-      &nbsp;
-      <span class="fs-5">{{ word.usg.value }}</span>
-      &nbsp;
-      <!-- <button
-      class="btn btn-light"
-      (click)="onPlayAudio()"
-    >
-      Reproducir Audio
-    </button>
-    &nbsp;
-    <button
-      *ngIf="dataWord.conjtarget !== ''"
-      class="btn btn-light"
-      (click)="onConj()"
-    >
-      Conjugar
-    </button> -->
-      <!--  <span-->
-      <!--    *ngFor="let item of dataWord;-->
-      <!--    index as i"-->
-      <!--    (click)="onLemmaWord(item.idTextos)"-->
-      <!--    [ngClass]="item.idTextos === 'no have id' ? '':'lemma-css'"-->
-      <!--  >-->
-      <!--    {{item.textos}}</span>-->
-
-      <div *ngFor="let item of word.senses; index as is">
-        <div class="d-flex">
-          <div class="d-flex" *ngFor="let itemSrc of item.senseSrc">
-            <button
-              *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'img'"
-              class="btn btn-primary"
-              (click)="onOpenWordImage(itemSrc.url)"
+            &nbsp;
+            <span
+              *ngIf="word.grupoGramatical.pos.length > 1"
+            >{{ word.grupoGramatical.pos }}</span
             >
-              <mat-icon svgIcon="image" matPrefix></mat-icon>
-            </button>
-            <button
-              *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'video'"
-              class="btn btn-primary"
-              (click)="onOpenWordVideo(itemSrc.url)"
-            >
-              <mat-icon svgIcon="videos" matPrefix></mat-icon>
+          </div>
+          <div
+            class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+          >
+            <button class="btn-primary rounded mx-1" matTooltip="Reproducir Audio">
+              <mat-icon matPrefix svgIcon="volume_up"></mat-icon>
             </button>
           </div>
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <span class="fw-bolder px-1">{{ is + 1 }} </span>
-          &nbsp; &nbsp;
-          <div class="d-flex flex-column">
-            <div id="definitions-container">
+          <div
+            class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+          >
+            <button
+              (click)="onOpenWordVideo(word.palabraSrc[0].url)"
+              class="btn-primary rounded mx-1"
+              matTooltip="Play Video"
+            >
+              <mat-icon matPrefix svgIcon="play_circle"></mat-icon>
+            </button>
+          </div>
+          <div
+            class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+          >
+            <button
+              (click)="onOpenWordImage(word.palabraSrc[0].url)"
+              class="btn-primary rounded mx-1"
+              matTooltip="Ver Imagen"
+            >
+              <mat-icon matPrefix svgIcon="image"></mat-icon>
+            </button>
+          </div>
+          <div
+            class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+          >
+            <button
+              (click)="onConj(word.palabraSrc[0].url)"
+              class="btn-primary rounded mx-1"
+              matTooltip="Conjugar"
+            >
+              Conjugar
+            </button>
+          </div>
+        </div>
+        &nbsp;
+
+        &nbsp;
+        <span class="fs-5">{{ word.usg.value }}</span>
+        &nbsp;
+        <!-- <button
+        class="btn btn-light"
+        (click)="onPlayAudio()"
+      >
+        Reproducir Audio
+      </button>
+      &nbsp;
+      <button
+        *ngIf="dataWord.conjtarget !== ''"
+        class="btn btn-light"
+        (click)="onConj()"
+      >
+        Conjugar
+      </button> -->
+        <!--  <span-->
+        <!--    *ngFor="let item of dataWord;-->
+        <!--    index as i"-->
+        <!--    (click)="onLemmaWord(item.idTextos)"-->
+        <!--    [ngClass]="item.idTextos === 'no have id' ? '':'lemma-css'"-->
+        <!--  >-->
+        <!--    {{item.textos}}</span>-->
+
+        <div *ngFor="let item of word.senses; index as is">
+          <div class="d-flex">
+            <div *ngFor="let itemSrc of item.senseSrc" class="d-flex">
+              <button
+                (click)="onOpenWordImage(itemSrc.url)"
+                *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'img'"
+                class="btn btn-primary"
+              >
+                <mat-icon matPrefix svgIcon="image"></mat-icon>
+              </button>
+              <button
+                (click)="onOpenWordVideo(itemSrc.url)"
+                *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'video'"
+                class="btn btn-primary"
+              >
+                <mat-icon matPrefix svgIcon="videos"></mat-icon>
+              </button>
+            </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="fw-bolder px-1">{{ is + 1 }} </span>
+            &nbsp; &nbsp;
+            <div class="d-flex flex-column">
+              <div id="definitions-container">
               <span
                 class="text-decoration-underline"
                 *ngFor="let item1 of item.categoriaGramatical"
               >{{ item1.pos }}</span
               >
-              <span
-                *ngFor="let item1 of item.definiciones[0]; index as i"
-                (click)="onLemmaWord(item1.lemmaid)"
-                [ngClass]="{
+                <span
+                  (click)="onLemmaWord(item1.lemmaid)"
+                  *ngFor="let item1 of item.definiciones[0]; index as i"
+                  [ngClass]="{
                   'lemma-css': item1.lemmaid !== 'no have id',
                   'fw-bolder':
                     item1.lemmaid === 'oRef' || item1.lemmaid === 'orthVariant'
                 }"
-              >{{ item1.textos }}</span
-              >
-            </div>
-            <div id="examples-container">
+                >{{ item1.textos }}</span
+                >
+              </div>
+              <div id="examples-container">
               <span *ngFor="let item1 of item.ejemplos[0]; index as i">
                 <span
                   (click)="onLemmaWord(item1.lemmaid)"
@@ -263,12 +264,12 @@
                 >
                 <span *ngIf="item1.textos === '.'"><br/></span>
               </span>
-            </div>
-            <div class="" *ngFor="let itemRe of item.entradasRelacionadas">
-              <span><br></span>
-              <span>// {{itemRe.myForms.lbl}} <span class="fw-bolder">{{itemRe.myForms.orthography}}</span></span>
-              <span><br></span>
-              <span *ngFor="let itemReSense of itemRe.mySense.definition">
+              </div>
+              <div *ngFor="let itemRe of item.entradasRelacionadas" class="">
+                <span><br></span>
+                <span>// {{itemRe.myForms.lbl}} <span class="fw-bolder">{{itemRe.myForms.orthography}}</span></span>
+                <span><br></span>
+                <span *ngFor="let itemReSense of itemRe.mySense.definition">
                 <span
                   (click)="onLemmaWord(itemReSense.lemmaid)"
                   [ngClass]="[
@@ -282,7 +283,7 @@
                 <span *ngIf="itemReSense.textos === '.'"><br/>
               </span>
               </span>
-              <span *ngFor="let itemReSenseEx of itemRe.mySense.examples">
+                <span *ngFor="let itemReSenseEx of itemRe.mySense.examples">
                 <span
                   (click)="onLemmaWord(itemReSenseEx.lemmaid)"
                   [ngClass]="[
@@ -291,19 +292,20 @@
                 >{{itemReSenseEx.textos}}</span>
                 <span *ngIf="itemReSenseEx.textos === '.'"><br/></span>
               </span>
+              </div>
             </div>
           </div>
+          <hr/>
         </div>
-        <hr/>
-      </div>
-      <div class="d-flex">
-        <span>{{ word.palabra.form.syllable }}</span>
-        <span class="p-1"></span>
-        <div *ngFor="let item of word.palabra.another">
-          <span>{{ item.orthography }} {{ item.number }}</span>
+        <div class="d-flex">
+          <span>{{ word.palabra.form.syllable }}</span>
           <span class="p-1"></span>
+          <div *ngFor="let item of word.palabra.another">
+            <span>{{ item.orthography }} {{ item.number }}</span>
+            <span class="p-1"></span>
+          </div>
         </div>
-      </div>
-    </mat-card>
+      </mat-card>
+    </cdk-virtual-scroll-viewport>
   </div>
 </div>
