--- a/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
+++ b/src/app/Components/dash-board/dash-board-content/dash-board-content.component.html
@@ -121,62 +121,65 @@
         *ngFor="let word of wordList; index as iword"
         class="example-card mat-elevation-z0"
       >
-        <div class="row align-items-center justify-content-start">
-          <div class="col-lg-2 col-md-2 col-sm-2 justify-content-between">
+        <div class="d-flex">
+          <div class="d-flex justify-content-center align-items-center">
             <span class="fw-bold">{{ word.palabra.form.orthography }}</span>
-            <div *ngFor="let itemNotes of word.notes">
-              <span
-                *ngFor="let notes of itemNotes.noteDefinition"
-              >
-                <span
-                  *ngIf="itemNotes.id === iword+1"
-                  (click)="onLemmaWord(notes.lemmaid)"
-                ></span>
-                {{notes.textos}}
-              </span>
-            </div>
+            <!--              <div *ngFor="let itemNotes of word.notes">-->
+            <!--              <span-->
+            <!--                *ngFor="let notes of itemNotes.noteDefinition"-->
+            <!--              >-->
+            <!--                <span-->
+            <!--                  *ngIf="itemNotes.id === iword+1"-->
+            <!--                  (click)="onLemmaWord(notes.lemmaid)"-->
+            <!--                ></span>-->
+            <!--                {{notes.textos}}-->
+            <!--              </span>-->
+            <!--              </div>-->
             &nbsp;
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
             <span
-              *ngIf="word.grupoGramatical.pos.length > 1"
-            >{{ word.grupoGramatical.pos }}</span
-            >
+              *ngFor="let gG of word.grupoGramatical; index as gIndex"
+            >{{ gG.value }}<span *ngIf="gIndex !== word.grupoGramatical.length -  1" class="p-1"> y </span></span>
           </div>
           <div
-            class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+            class="p-1 d-flex justify-content-center"
           >
-            <button class="btn-primary rounded mx-1" matTooltip="Reproducir Audio">
-              <mat-icon matPrefix svgIcon="volume_up"></mat-icon>
+            <button class="border-0" matTooltip="Reproducir Audio">
+              <mat-icon color="primary" matPrefix svgIcon="volume_up"></mat-icon>
             </button>
           </div>
           <div
-            class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+            class=" p-1 d-flex justify-content-center"
           >
             <button
               (click)="onOpenWordVideo(word.palabraSrc[0].url)"
-              class="btn-primary rounded mx-1"
+              class="border-0"
               matTooltip="Play Video"
             >
-              <mat-icon matPrefix svgIcon="play_circle"></mat-icon>
+              <mat-icon color="primary" matPrefix svgIcon="play_circle"></mat-icon>
             </button>
           </div>
           <div
-            class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+            class=" p-1 d-flex justify-content-center"
           >
             <button
               (click)="onOpenWordImage(word.palabraSrc[0].url)"
-              class="btn-primary rounded mx-1"
+              class="border-0"
               matTooltip="Ver Imagen"
             >
-              <mat-icon matPrefix svgIcon="image"></mat-icon>
+              <mat-icon color="primary" matPrefix svgIcon="image"></mat-icon>
             </button>
           </div>
           <div
-            class="col-lg-2 col-md-2 col-sm-2 p-1 d-flex justify-content-center"
+            class="p-1 d-flex justify-content-center"
           >
             <button
               (click)="onConj(word.palabraSrc[0].url)"
-              class="btn-primary rounded mx-1"
+              class="border-0"
               matTooltip="Conjugar"
+              color="primary"
+              mat-flat-button
             >
               Conjugar
             </button>
@@ -215,16 +218,17 @@
               <button
                 (click)="onOpenWordImage(itemSrc.url)"
                 *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'img'"
-                class="btn btn-primary"
+                class="border-0"
               >
-                <mat-icon matPrefix svgIcon="image"></mat-icon>
+                <mat-icon color="primary" matPrefix svgIcon="image"></mat-icon>
               </button>
               <button
                 (click)="onOpenWordVideo(itemSrc.url)"
                 *ngIf="is + 1 == itemSrc.id && itemSrc.type === 'video'"
-                class="btn btn-primary"
+                class="border-0"
+                matTooltip="Play Video"
               >
-                <mat-icon matPrefix svgIcon="videos"></mat-icon>
+                <mat-icon color="primary" matPrefix svgIcon="play_circle"></mat-icon>
               </button>
             </div>
             &nbsp;&nbsp;&nbsp;&nbsp;
@@ -300,8 +304,12 @@
         <div class="d-flex">
           <span>{{ word.palabra.form.syllable }}</span>
           <span class="p-1"></span>
-          <div *ngFor="let item of word.palabra.another">
-            <span>{{ item.orthography }} {{ item.number }}</span>
+          <div *ngFor="let item of word.palabra.another; index as i">
+            <span>
+              {{ item.orthography }}
+              <span *ngIf="i === 0">{{ item.number }}</span>
+              <span *ngIf="!item.orthography.endsWith('s')">{{item.gram}}</span>
+            </span>
             <span class="p-1"></span>
           </div>
         </div>
